feat(ui): conditional store build (#721)
* feat: pipeline support config env

* chore: bump rsbuild

* feat: local chain config

* feat: conditional store when building

* fix: typo sentry dsn

* chore: config env in turbo

* feat: load welcome modal only on testnet

* fix: initial value in useStorage

* fix: bg in body

* fix: applets hook

* fix: typo block explorer

* fix: quest banner only query when visible

--- a/turbo.json
+++ b/turbo.json
@@ -28,10 +28,10 @@
   },
   "globalEnv": [
     "NEXT_PUBLIC_FULLPAGE_KEY",
+    "CONFIG_ENVIRONMENT",
     "PUBLIC_WEBRTC_URI",
     "PUBLIC_SENTRY_DSN",
     "PUBLIC_FAUCET_URI",
-    "PUBLIC_ENVIRONMENT",
     "SENTRY_ORG",
     "SENTRY_PROJECT",
     "SENTRY_AUTH_TOKEN"
