--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,7 +69,7 @@ actix-http              = "3"
 actix-test              = "0.1"
 actix-web               = "4"
 aes-gcm                 = "0.10"
-alloy                   = "0.12"
+alloy                   = "1"
 anyhow                  = "1"
 assert-json-diff        = "2"
 assertor                = { version = "0.0", git = "https://github.com/google/assertor" }
@@ -93,7 +93,7 @@ colored                 = "3"
 colored_json            = "5"
 config                  = "0.15"
 config-parser           = { path = "config-parser" }
-criterion               = "0.5"
+criterion               = "0.6"
 data-encoding           = "2"
 dialoguer               = "0.11"
 digest                  = "0.10"
@@ -126,15 +126,15 @@ reqwest                 = { version = "0.12", features = ["stream"] }
 reqwest-eventsource     = "0.6.0"
 ripemd                  = "0.1"
 rocksdb                 = "0.23"
-sentry                  = { version = "0.37", features = ["log", "tracing"] }
-sentry-actix            = "0.37"
+sentry                  = { version = "0.38", features = ["log", "tracing"] }
+sentry-actix            = "0.38"
 serde                   = "1"
 serde_json              = "1"
 serde_with              = "3"
 sha2                    = "0.10"
 sha3                    = "0.10"
 signature               = "2"
-sqlx                    = "0"
+sqlx                    = "0.8"
 strum                   = "0.27"
 strum_macros            = "0.27"
 syn                     = "2"
@@ -154,8 +154,8 @@ tracing-actix-web       = "0.7"
 tracing-subscriber      = { version = "0.3", features = ["env-filter", "fmt"] }
 url                     = "2.5.4"
 uuid                    = { version = "1", features = ["serde", "v4"] }
-wasmer                  = "5"
-wasmer-middlewares      = "5"
+wasmer                  = "5" # keep at v5 because there's license change for v6
+wasmer-middlewares      = "5" # keep at v5 because there's license change for v6
 
 # Left curve packages
 dango-account-factory       = { path = "dango/account/factory" }
