--- a/deploy/reset-dango.yml
+++ b/deploy/reset-dango.yml
@@ -8,7 +8,7 @@
   tasks:
     - name: Stop and remove dango container
       docker_container:
-        name: dango
+        name: "{{ dango_network }}_dango"
         state: absent
         keep_volumes: false
     - name: Remove directory
@@ -18,7 +18,7 @@
     - name: Drop Dango production database
       tags: cleanup
       community.postgresql.postgresql_db:
-        name: "{{ dango_db_name }}"
+        name: "{{ dango_network }}_{{ dango_db_name }}"
         login_user: "{{ db_user }}"
         login_password: "{{ db_pass }}"
         login_host: "{{ db_host }}"
