--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -322,13 +322,12 @@ jobs:
         run: |
           cd deploy
           pipx ensurepath
-          # TODO: Make sure we only deploy on devnet
-          ansible-playbook reset-cometbft.yml
-          ansible-playbook reset-dango.yml
-          ansible-playbook cometbft.yml
-          ansible-playbook dango.yml --tags setup
-          ansible-playbook dango.yml \
+          ansible-playbook reset-cometbft.yml --limit 100.96.253.40
+          ansible-playbook reset-dango.yml --limit 100.96.253.40
+          ansible-playbook cometbft.yml --limit 100.96.253.40
+          ansible-playbook dango.yml --tags setup --limit 100.96.253.40
+          ansible-playbook dango.yml --limit 100.96.253.40 \
             --skip-tags setup \
             -e dango_image_tag=${{ env.GIT_COMMIT }} \
             -e "dango_db_password=$DANGO_DB_PASSWORD"
-          ansible-playbook bots.yml
+          ansible-playbook bots.yml --limit 100.96.253.40
