--- a/deploy/install-github-runner-hosts.yml
+++ b/deploy/install-github-runner-hosts.yml
@@ -4,7 +4,7 @@
   vars:
     github_account: left-curve
     runner_org: yes
-    access_token: "{{ lookup('env', 'GITHUB_TOKEN') }}"
+    access_token: "{{ lookup('env', 'RUNNERS_GITHUB_TOKEN') }}"
   roles:
     - MonolithProjects.github_actions_runner
   tasks:
