--- a/deploy/roles/dango/defaults/main.yml
+++ b/deploy/roles/dango/defaults/main.yml
@@ -1,10 +1,19 @@
 ---
-dango_target_dir: "{{ ansible_env.HOME }}/dango"
+dango_target_dir: "{{ ansible_env.HOME }}/{{ dango_network }}/dango"
 dango_db_user: dango
-dango_db_name: dango_production
+dango_db_name: "dango_production"
 dango_db_password: "{{ lookup('env','DANGO_DB_PASSWORD') }}"
 db_pass: "{{ lookup('env','DB_PASSWORD') }}"
 db_user: "{{ lookup('env','DB_USER', default='postgres') }}"
 db_host: "127.0.0.1"
 db_port: 5432
-dango_db_host: "postgres"
+dango_port: 8080
+# should be opened to anyone
+cometbft_p2p_port: 26656
+# should be open to tailscale only
+cometbft_rpc_port: 26657
+# should be only to localhost or cometbft containers
+cometbft_abci_port: 26658
+docker_db_host: "postgres"
+cometbft_rpc_host: "{{ dango_network }}_cometbft"
+dango_rpc_host: "{{ dango_network }}_dango"
