--- a/deploy/roles/dango/tasks/main.yml
+++ b/deploy/roles/dango/tasks/main.yml
@@ -1,10 +1,10 @@
-- name: Install nginx as a proxy
-  tags: setup
-  become: true
-  become_user: root
-  apt:
-    name: nginx
-    state: present
+- name: Ensure target dir exists
+  file:
+    path: "{{ dango_target_dir }}/{{ item }}"
+    state: directory
+    mode: '0755'
+  loop:
+    - config
 
 - name: Install psycopg2 so Ansible can talk to Postgres
   tags: setup
@@ -28,7 +28,7 @@
 - name: Create Dango production database
   tags: setup
   community.postgresql.postgresql_db:
-    name: "{{ dango_db_name }}"
+    name: "{{ dango_network }}_{{ dango_db_name }}"
     owner: "{{ dango_db_user }}"
     login_user: "{{ db_user }}"
     login_password: "{{ db_pass }}"
@@ -42,26 +42,32 @@
     type: database
     privs: ALL
     roles: "{{ dango_db_user }}"
-    login_db: "{{ dango_db_name }}"
+    login_db: "{{ dango_network }}_{{ dango_db_name }}"
     login_user: "{{ db_user }}"
     login_password: "{{ db_pass }}"
     login_host: "{{ db_host }}"
     login_port: "{{ db_port }}"
     state: present
 
-- name: Copy all files from dango role
+- name: Copy app.toml
   tags: setup
-  copy:
-    src: "{{ playbook_dir }}/roles/dango/files/config"
-    dest: "{{ dango_target_dir }}"
-    mode: '0644'
+  template:
+    src: "{{ playbook_dir }}/roles/dango/templates/{{ dango_network }}/config/app.toml"
+    dest: "{{ dango_target_dir }}/config/app.toml"
 
 - name: Ensure backend network exists
   tags: setup
   community.docker.docker_network:
-    name: backend
+    name: "{{ dango_network }}_backend"
     driver: bridge
     state: present
+
+- name: Connect Postgres container to extra network
+  community.docker.docker_network:
+    name: "{{ dango_network }}_backend"
+    connected:
+      - "{{ docker_db_host }}"
+    appends: true
 
 - name: Allow TCP ports
   tags: setup
@@ -73,11 +79,11 @@
     port: "{{ item }}"
     proto: tcp
   loop:
-    - 8080
+    - "{{ dango_port }}"
 
 - name: Deploy dango container
   docker_container:
-    name: dango
+    name: "{{ dango_network }}_dango"
     image: "ghcr.io/left-curve/left-curve/dango:{{ dango_image_tag }}"
     user: "{{ ansible_user_uid }}:{{ ansible_user_gid }}"
     pull: always           # always pull the image
@@ -86,15 +92,15 @@
     state: started
     env:
       HOME: /app
-      INDEXER__DATABASE_URL: "postgres://{{ dango_db_user }}:{{ dango_db_password }}@{{ dango_db_host }}:{{ db_port }}/{{ dango_db_name }}"
+      INDEXER__DATABASE_URL: "postgres://{{ dango_db_user }}:{{ dango_db_password }}@{{ docker_db_host }}:{{ db_port }}/{{ dango_network }}_{{ dango_db_name }}"
       SENTRY__ENABLED: "false"
       SENTRY__DSN: "https://your-dsn-here"
       SENTRY__ENVIRONMENT: "production"
     ports:
-      - "8080:8080"
+      - "{{ dango_port }}:8080"
     volumes:
       - "{{ dango_target_dir }}:/app/.dango"
     networks:
-      - name: backend
+      - name: "{{ dango_network }}_backend"
     tty: true
 
