Add faucet bots

--- a/deploy/roles/bots/tasks/main.yml
+++ b/deploy/roles/bots/tasks/main.yml
@@ -8,7 +8,7 @@
     port: "{{ item }}"
     proto: tcp
   loop:
-    - 8082
+    - "{{ faucet_port }}"
 
 - name: Login to GHCR
   community.docker.docker_login:
@@ -18,19 +18,19 @@
 
 - name: Deploy bots container
   docker_container:
-    name: bots
+    name: "{{ dango_network }}_bots"
     image: ghcr.io/left-curve/bots/bots:latest
     user: "{{ ansible_user_uid }}:{{ ansible_user_gid }}"
     pull: always
     recreate: true
     restart_policy: unless-stopped
     state: started
-    command: ["faucet", "--provider-url", "http://dango:8080"]
+    command: ["faucet", "--provider-url", "http://{{ dango_network }}_dango:{{ dango_port }}"]
     env:
       HOME: /app
     ports:
-      - "8082:8082"
+      - "{{ faucet_port }}:8082"
     networks:
-      - name: backend
+      - name: "{{ dango_network }}_backend"
     tty: true
 
