--- a/deploy/group_vars/all.yml
+++ b/deploy/group_vars/all.yml
@@ -4,3 +4,16 @@ ssh_users:
   - larry
   - zexsor
 deploy_user: deploy
+ports:
+  testnet:
+    dango_port: 8080
+    faucet_port: 8082
+    cometbft_p2p_port: 26656
+    cometbft_rpc_port: 26657
+    cometbft_abci_port: 26658
+  devnet:
+    dango_port: 8080
+    faucet_port: 8082
+    cometbft_p2p_port: 26656
+    cometbft_rpc_port: 26657
+    cometbft_abci_port: 26658
