--- a/deploy/roles/cometbft/tasks/main.yml
+++ b/deploy/roles/cometbft/tasks/main.yml
@@ -1,24 +1,38 @@
 - name: Ensure target dir exists
+  vars:
+    cometbft_target_dir: "{{ ansible_env.HOME }}/{{ item[0] }}/cometbft"
   file:
-    path: "{{ cometbft_target_dir }}/{{ item }}"
+    path: "{{ cometbft_target_dir }}/{{ item[1] }}"
     state: directory
     mode: '0755'
-  loop:
-    - config
-    - data
+  loop: "{{ dango_networks | product(['config', 'data']) | list }}"
 
 - name: Copy validator state only if missing
+  vars:
+    cometbft_target_dir: "{{ ansible_env.HOME }}/{{ dango_network }}/cometbft"
   copy:
     src: "{{ playbook_dir }}/roles/cometbft/files/{{ dango_network }}/data/priv_validator_state.json"
     dest: "{{ cometbft_target_dir }}/data/priv_validator_state.json"
     mode: '0644'
     force: no
+  loop: "{{ dango_networks }}"
+  loop_control:
+    loop_var: dango_network
 
 - name: Render all templates from cometbft role
+  vars:
+    dango_network: "{{ item[0] }}"
+    cometbft_target_dir: "{{ ansible_env.HOME }}/{{ dango_network }}/cometbft"
+    dango_rpc_host: "{{ dango_network }}_dango"
+    COMETBFT_NODE_KEY: "{{ lookup('env', (dango_network|upper) ~ '_COMETBFT_NODE_KEY') }}"
+    COMETBFT_VALIDATOR_ADDRESS: "{{ lookup('env', (dango_network|upper) ~ '_COMETBFT_VALIDATOR_ADDRESS') }}"
+    COMETBFT_VALIDATOR_PUB_KEY: "{{ lookup('env', (dango_network|upper) ~ '_COMETBFT_VALIDATOR_PUB_KEY') }}"
+    COMETBFT_VALIDATOR_PRIVATE_KEY: "{{ lookup('env', (dango_network|upper) ~ '_COMETBFT_VALIDATOR_PRIVATE_KEY') }}"
+    cometbft_abci_port: "{{ ports[dango_network].cometbft_abci_port }}"
   template:
-    src: "{{ item }}"
-    dest: "{{ cometbft_target_dir }}/config/{{ item | basename }}"
-  loop: "{{ lookup('fileglob', playbook_dir + '/roles/cometbft/templates/{{ dango_network }}/config/*', wantlist=True) }}"
+    src: "{{ playbook_dir }}/roles/cometbft/templates/{{ dango_network }}/config/{{ item[1] }}"
+    dest: "{{ cometbft_target_dir }}/config/{{ item[1] }}"
+  loop: "{{ dango_networks | product(['config.toml', 'genesis.json', 'node_key.json', 'priv_validator_key.json']) | list}}"
 
 - name: Allow TCP ports
   tags: setup
@@ -27,16 +41,20 @@
   ufw:
     rule: allow
     direction: in
-    port: "{{ item }}"
+    port: "{{ ports[dango_network].cometbft_p2p_port }}"
     proto: tcp
-  loop:
-    - "{{ cometbft_p2p_port }}"
+  loop: "{{ dango_networks }}"
+  loop_control:
+    loop_var: dango_network
 
 - name: Ensure backend network exists
   community.docker.docker_network:
     name: "{{ dango_network }}_backend"
     driver: bridge
     state: present
+  loop: "{{ dango_networks }}"
+  loop_control:
+    loop_var: dango_network
 
 - name: Login to GHCR
   community.docker.docker_login:
@@ -45,6 +63,10 @@
     password: "{{ ghcr_token }}"
 
 - name: Deploy cometbft container
+  vars:
+    cometbft_target_dir: "{{ ansible_env.HOME }}/{{ dango_network }}/cometbft"
+    cometbft_rpc_port: "{{ ports[dango_network].cometbft_rpc_port }}"
+    cometbft_p2p_port: "{{ ports[dango_network].cometbft_p2p_port }}"
   docker_container:
     name: "{{ dango_network }}_cometbft"
     image: ghcr.io/left-curve/left-curve/cometbft:v0.38.17
@@ -63,3 +85,6 @@
     networks:
       - name: "{{ dango_network }}_backend"
     tty: true
+  loop: "{{ dango_networks }}"
+  loop_control:
+    loop_var: dango_network
