--- a/deploy/roles/dango/tasks/main.yml
+++ b/deploy/roles/dango/tasks/main.yml
@@ -1,10 +1,11 @@
 - name: Ensure target dir exists
+  vars:
+    dango_target_dir: "{{ ansible_env.HOME }}/{{ item[0] }}/dango"
   file:
-    path: "{{ dango_target_dir }}/{{ item }}"
+    path: "{{ dango_target_dir }}/{{ item[1] }}"
     state: directory
     mode: '0755'
-  loop:
-    - config
+  loop: "{{ dango_networks | product(['config']) | list }}"
 
 - name: Install psycopg2 so Ansible can talk to Postgres
   tags: setup
@@ -35,6 +36,9 @@
     login_host: "{{ db_host }}"
     login_port: "{{ db_port }}"
     state: present
+  loop: "{{ dango_networks }}"
+  loop_control:
+    loop_var: dango_network
 
 - name: Grant ALL privileges on the Dango database to the Dango user
   tags: setup
@@ -48,12 +52,23 @@
     login_host: "{{ db_host }}"
     login_port: "{{ db_port }}"
     state: present
+  loop: "{{ dango_networks }}"
+  loop_control:
+    loop_var: dango_network
 
 - name: Copy app.toml
+  vars:
+    dango_target_dir: "{{ ansible_env.HOME }}/{{ dango_network }}/dango"
+    cometbft_rpc_host: "{{ dango_network }}_cometbft"
+    cometbft_rpc_port: "{{ ports[dango_network].cometbft_rpc_port }}"
+    cometbft_abci_port: "{{ ports[dango_network].cometbft_abci_port }}"
   tags: setup
   template:
     src: "{{ playbook_dir }}/roles/dango/templates/{{ dango_network }}/config/app.toml"
     dest: "{{ dango_target_dir }}/config/app.toml"
+  loop: "{{ dango_networks }}"
+  loop_control:
+    loop_var: dango_network
 
 - name: Ensure backend network exists
   tags: setup
@@ -61,6 +76,9 @@
     name: "{{ dango_network }}_backend"
     driver: bridge
     state: present
+  loop: "{{ dango_networks }}"
+  loop_control:
+    loop_var: dango_network
 
 - name: Connect Postgres container to extra network
   community.docker.docker_network:
@@ -68,6 +86,9 @@
     connected:
       - "{{ docker_db_host }}"
     appends: true
+  loop: "{{ dango_networks }}"
+  loop_control:
+    loop_var: dango_network
 
 - name: Allow TCP ports
   tags: setup
@@ -76,12 +97,16 @@
   ufw:
     rule: allow
     direction: in
-    port: "{{ item }}"
+    port: "{{ ports[dango_network].dango_port }}"
     proto: tcp
-  loop:
-    - "{{ dango_port }}"
+  loop: "{{ dango_networks }}"
+  loop_control:
+    loop_var: dango_network
 
 - name: Deploy dango container
+  vars:
+    dango_target_dir: "{{ ansible_env.HOME }}/{{ dango_network }}/dango"
+    dango_port: "{{ ports[dango_network].dango_port }}"
   docker_container:
     name: "{{ dango_network }}_dango"
     image: "ghcr.io/left-curve/left-curve/dango:{{ dango_image_tag }}"
@@ -103,4 +128,7 @@
     networks:
       - name: "{{ dango_network }}_backend"
     tty: true
+  loop: "{{ dango_networks }}"
+  loop_control:
+    loop_var: dango_network
 
