--- a/deploy/group_vars/all.yml
+++ b/deploy/group_vars/all.yml
@@ -12,8 +12,15 @@ ports:
     cometbft_rpc_port: 26657
     cometbft_abci_port: 26658
   devnet:
-    dango_port: 8080
-    faucet_port: 8082
-    cometbft_p2p_port: 26656
-    cometbft_rpc_port: 26657
+    dango_port: 8090
+    faucet_port: 8092
+    cometbft_p2p_port: 36656
+    cometbft_rpc_port: 36657
     cometbft_abci_port: 26658
+
+# in summary cometbft needs to expose:
+# 26656, to anyone
+# 26657, to tailscale
+# dango needs to expose:
+# 8080, to anyone
+# 26658, to cometbft container only
