--- a/deploy/roles/dango/templates/devnet/config/app.toml
+++ b/deploy/roles/dango/templates/devnet/config/app.toml
@@ -56,10 +56,10 @@ port = 8080
 [tendermint]
 
 # Tendermint RPC listening address.
-rpc_addr = "http://{{ cometbft_rpc_host }}:{{ cometbft_rpc_port }}"
+rpc_addr = "http://{{ cometbft_rpc_host }}:26657"
 
 # Tendermint ABCI listening address.
-abci_addr = "0.0.0.0:{{ cometbft_abci_port }}"
+abci_addr = "0.0.0.0:26658"
 
 ################################################################################
 ###                        Transaction Configuration                         ###
