--- a/deploy/roles/cometbft/templates/devnet/config/config.toml
+++ b/deploy/roles/cometbft/templates/devnet/config/config.toml
@@ -16,7 +16,7 @@ version = "1.0.0"
 
 # TCP or UNIX socket address of the ABCI application,
 # or the name of an ABCI application compiled in with the CometBFT binary
-proxy_app = "tcp://{{ dango_rpc_host }}:{{ cometbft_abci_port }}"
+proxy_app = "tcp://{{ dango_host }}:26658"
 
 # A custom human readable name for this node
 moniker = "dev"
