Add testnet deploys (#723)
* Add testnet deploys

* Add faucet bots

* Fix

* Add support for multi networks

* Fix

* Fix

* Fix

* Fix

* Fix

--- a/deploy/reset-dango.yml
+++ b/deploy/reset-dango.yml
@@ -8,19 +8,30 @@
   tasks:
     - name: Stop and remove dango container
       docker_container:
-        name: dango
+        name: "{{ dango_network }}_dango"
         state: absent
         keep_volumes: false
+      loop: "{{ dango_networks }}"
+      loop_control:
+        loop_var: dango_network
     - name: Remove directory
+      vars:
+        dango_target_dir: "{{ ansible_env.HOME }}/{{ dango_network }}/dango"
       file:
         path: "{{ dango_target_dir }}"
         state: absent
+      loop: "{{ dango_networks }}"
+      loop_control:
+        loop_var: dango_network
     - name: Drop Dango production database
       tags: cleanup
       community.postgresql.postgresql_db:
-        name: "{{ dango_db_name }}"
+        name: "{{ dango_network }}_{{ dango_db_name }}"
         login_user: "{{ db_user }}"
         login_password: "{{ db_pass }}"
         login_host: "{{ db_host }}"
         login_port: "{{ db_port }}"
         state: absent
+      loop: "{{ dango_networks }}"
+      loop_control:
+        loop_var: dango_network
