--- a/deploy/group_vars/all.yml
+++ b/deploy/group_vars/all.yml
@@ -10,13 +10,13 @@ ports:
     faucet_port: 8082
     cometbft_p2p_port: 26656
     cometbft_rpc_port: 26657
-    cometbft_abci_port: 26658
+    # cometbft_abci_port: 26658
   devnet:
     dango_port: 8080
     faucet_port: 8082
     cometbft_p2p_port: 26656
     cometbft_rpc_port: 26657
-    cometbft_abci_port: 26658
+    # cometbft_abci_port: 26658
 
 # in summary cometbft needs to expose:
 # 26656, to anyone
