--- a/deploy/roles/bots/tasks/main.yml
+++ b/deploy/roles/bots/tasks/main.yml
@@ -20,7 +20,7 @@
 - name: Deploy bots container
   docker_container:
     name: "{{ dango_network }}_bots"
-    image: ghcr.io/left-curve/bots/bots:latest
+    image: "ghcr.io/left-curve/bots/bots:{{ git_version }}"
     user: "{{ ansible_user_uid }}:{{ ansible_user_gid }}"
     pull: always
     recreate: true
@@ -37,4 +37,3 @@
   loop: "{{ dango_networks }}"
   loop_control:
     loop_var: dango_network
-
