--- a/deploy/roles/dango/tasks/main.yml
+++ b/deploy/roles/dango/tasks/main.yml
@@ -118,8 +118,8 @@
     env:
       HOME: /app
       INDEXER__DATABASE_URL: "postgres://{{ dango_db_user }}:{{ dango_db_password }}@{{ docker_db_host }}:{{ db_port }}/{{ dango_network }}_{{ dango_db_name }}"
-      SENTRY__ENABLED: "false"
-      SENTRY__DSN: "https://your-dsn-here"
+      SENTRY__ENABLED: "true"
+      SENTRY__DSN: "{{ lookup('env','SENTRY__DSN') }}"
       SENTRY__ENVIRONMENT: "production"
     ports:
       - "{{ dango_port }}:8080"
