--- a/deploy/roles/dango/tasks/main.yml
+++ b/deploy/roles/dango/tasks/main.yml
@@ -120,7 +120,7 @@
       INDEXER__DATABASE_URL: "postgres://{{ dango_db_user }}:{{ dango_db_password }}@{{ docker_db_host }}:{{ db_port }}/{{ dango_network }}_{{ dango_db_name }}"
       SENTRY__ENABLED: "true"
       SENTRY__DSN: "{{ lookup('env','SENTRY__DSN') }}"
-      SENTRY__ENVIRONMENT: "production"
+      SENTRY__ENVIRONMENT: "production-{{ dango_network }}"
     ports:
       - "{{ dango_port }}:8080"
     volumes:
