disable the `testing` feature on dango-cli by default

--- a/dango/cli/Cargo.toml
+++ b/dango/cli/Cargo.toml
@@ -10,7 +10,7 @@ rust-version  = { workspace = true }
 version       = { workspace = true }
 
 [features]
-default = ["testing"]
+default = []
 testing = ["pyth-client", "pyth-types", "tokio-stream"]
 
 [dependencies]
