--- a/ui/applets/kit/package.json
+++ b/ui/applets/kit/package.json
@@ -61,6 +61,7 @@
     "cmdk": "^1.0.4",
     "framer-motion": "catalog:",
     "qr-code-styling": "^1.7.2",
+    "react-json-view": "^1.21.3",
     "react-use": "^17.5.1",
     "tailwind-scrollbar": "^3.1.0",
     "tailwind-variants": "^0.2.1",
