--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -41,6 +41,7 @@ sha2                    = { workspace = true }
 
 [dev-dependencies]
 anyhow                = { workspace = true }
+assert-json-diff      = { workspace = true }
 assertor              = { workspace = true }
 bip32                 = { workspace = true }
 chrono                = { workspace = true }
