--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,7 @@ colored                 = "3"
 colored_json            = "5"
 config                  = "0.15"
 config-parser           = { path = "config-parser" }
+corepc-client           = "0.7"
 criterion               = "0.5"
 data-encoding           = "2"
 dialoguer               = "0.11"
