--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -44,6 +44,7 @@ anyhow                = { workspace = true }
 assertor              = { workspace = true }
 bip32                 = { workspace = true }
 chrono                = { workspace = true }
+corepc-client         = { workspace = true }
 criterion             = { workspace = true }
 dango-account-factory = { workspace = true, features = ["library"] }
 dango-auth            = { workspace = true }
