add bitcoin contract to genesis

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ awc                     = "3"
 axum                    = "0.8"
 base64                  = "0.22"
 bip32                   = "0.5"
+bip39                   = "2.1.0"
 blake2                  = "0.10"
 blake3                  = "1"
 bnum                    = "0.13"
