Index account creations (#589)

--- a/dango/indexer/sql/Cargo.toml
+++ b/dango/indexer/sql/Cargo.toml
@@ -17,11 +17,14 @@ anyhow                      = { workspace = true }
 async-trait                 = { workspace = true }
 borsh                       = { workspace = true }
 dango-indexer-sql-migration = { workspace = true }
+dango-types                 = { workspace = true }
+grug                        = { workspace = true }
 grug-app                    = { workspace = true }
 grug-math                   = { workspace = true }
 grug-types                  = { workspace = true }
 indexer-disk-saver          = { workspace = true }
 indexer-sql                 = { workspace = true }
+itertools                   = { workspace = true }
 sea-orm                     = { workspace = true }
 serde                       = { workspace = true }
 serde_json                  = { workspace = true }
