--- a/grug/types/Cargo.toml
+++ b/grug/types/Cargo.toml
@@ -15,8 +15,10 @@ version       = { workspace = true }
 # - tendermint::abci::Event -> CronOutcome
 # - tendermint_rpc::endpoint::tx::Response -> SearchTxOutcome
 tendermint = ["dep:tendermint", "tendermint-rpc"]
-# Include a method to convert a `Timestamp` to an RFC-3339 string.
-rfc3339 = ["chrono"]
+# Include methods to a convert `Timestamp` to:
+# - a `chrono::NaiveDateTime`, which is used in SQL databases;
+# - an RFC-3339 string, used in tracing output.
+chrono = ["dep:chrono"]
 
 [dependencies]
 bnum           = { workspace = true, features = ["borsh"] }
