refactor: remove two duplicate types between dango-types and indexer crates (#756)
* delete duplicate `AccountType` types

* move `KeyType` into dango-types

* remove an unnecessary feature requirement

* fix linter warnings

--- a/dango/httpd/Cargo.toml
+++ b/dango/httpd/Cargo.toml
@@ -16,6 +16,7 @@ async-graphql-actix-web = { workspace = true }
 chrono                  = { workspace = true }
 clap                    = { workspace = true }
 dango-indexer-sql       = { workspace = true }
+dango-types             = { workspace = true, features = ["async-graphql"] }
 indexer-httpd           = { workspace = true }
 indexer-sql             = { workspace = true }
 itertools               = { workspace = true }
