--- a/indexer/sql/Cargo.toml
+++ b/indexer/sql/Cargo.toml
@@ -13,10 +13,12 @@ version       = { workspace = true }
 path = "src/lib.rs"
 
 [features]
-tracing = ["dep:tracing"]
+async-graphql = ["dep:async-graphql"]
+tracing       = ["dep:tracing"]
 
 [dependencies]
 anyhow                = { workspace = true }
+async-graphql         = { workspace = true, optional = true }
 async-stream          = { workspace = true }
 async-trait           = { workspace = true }
 borsh                 = { workspace = true }
@@ -26,6 +28,7 @@ grug-math             = { workspace = true }
 grug-types            = { workspace = true }
 indexer-disk-saver    = { workspace = true }
 indexer-sql-migration = { workspace = true }
+itertools             = { workspace = true }
 sea-orm               = { workspace = true }
 serde                 = { workspace = true }
 serde_json            = { workspace = true }
