--- a/Cargo.toml
+++ b/Cargo.toml
@@ -200,7 +200,7 @@ grug-mock-taxman            = { path = "grug/mocks/taxman" }
 grug-storage                = { path = "grug/storage" }
 grug-tester                 = { path = "grug/tester" }
 grug-testing                = { path = "grug/testing" }
-grug-types                  = { path = "grug/types", features = ["async-graphql", "sea-orm"] }
+grug-types                  = { path = "grug/types" }
 grug-vm-hybrid              = { path = "grug/vm/hybrid" }
 grug-vm-rust                = { path = "grug/vm/rust" }
 grug-vm-wasm                = { path = "grug/vm/wasm" }
