--- a/dango/indexer/sql/Cargo.toml
+++ b/dango/indexer/sql/Cargo.toml
@@ -10,10 +10,14 @@ rust-version  = { workspace = true }
 version       = { workspace = true }
 
 [features]
-tracing = ["dep:tracing"]
+async-graphql = ["dep:actix-web", "dep:async-graphql", "grug-types/async-graphql"]
+testing       = []
+tracing       = ["dep:tracing"]
 
 [dependencies]
+actix-web                   = { workspace = true, optional = true }
 anyhow                      = { workspace = true }
+async-graphql               = { workspace = true, optional = true }
 async-trait                 = { workspace = true }
 borsh                       = { workspace = true }
 dango-indexer-sql-migration = { workspace = true }
