--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -14,7 +14,7 @@ actix-web               = { workspace = true }
 anyhow                  = { workspace = true }
 async-graphql           = { workspace = true }
 dango-genesis           = { workspace = true }
-dango-indexer-sql       = { workspace = true, features = ["tracing"] }
+dango-indexer-sql       = { workspace = true, features = ["async-graphql", "testing", "tracing"] }
 dango-proposal-preparer = { workspace = true }
 dango-types             = { workspace = true }
 digest                  = { workspace = true }
@@ -30,7 +30,7 @@ hex-literal             = { workspace = true }
 hyperlane-testing       = { workspace = true }
 hyperlane-types         = { workspace = true }
 indexer-httpd           = { workspace = true }
-indexer-sql             = { workspace = true, features = ["tracing"] }
+indexer-sql             = { workspace = true, features = ["async-graphql", "testing", "tracing"] }
 k256                    = { workspace = true }
 pyth-client             = { workspace = true }
 pyth-types              = { workspace = true }
