--- a/grug/types/Cargo.toml
+++ b/grug/types/Cargo.toml
@@ -10,17 +10,19 @@ rust-version  = { workspace = true }
 version       = { workspace = true }
 
 [features]
+# Derive async-graphql traits for certain types.
+async-graphql = ["dep:async-graphql"]
+# Include methods to convert `Timestamp` to:
+# - a `chrono::NaiveDateTime`, which is used in SQL databases;
+# - an RFC-3339 string, used in tracing output.
+chrono = ["dep:chrono"]
+# Derive sea-orm traits for certain types.
+sea-orm = ["dep:sea-orm"]
 # Include methods to cast Tendermint types to Grug types. These include:
 # - tendermint::abci::types::ExecTxResult -> TxOutcome
 # - tendermint::abci::Event -> CronOutcome
 # - tendermint_rpc::endpoint::tx::Response -> SearchTxOutcome
 tendermint = ["dep:tendermint", "tendermint-rpc"]
-# Include methods to convert `Timestamp` to:
-# - a `chrono::NaiveDateTime`, which is used in SQL databases;
-# - an RFC-3339 string, used in tracing output.
-async-graphql = ["dep:async-graphql"]
-chrono        = ["dep:chrono"]
-sea-orm       = ["dep:sea-orm"]
 
 [dependencies]
 async-graphql  = { workspace = true, optional = true }
