--- a/dango/cli/Cargo.toml
+++ b/dango/cli/Cargo.toml
@@ -23,7 +23,7 @@ config-parser           = { workspace = true }
 dango-client            = { workspace = true }
 dango-genesis           = { workspace = true }
 dango-httpd             = { workspace = true }
-dango-indexer-sql       = { workspace = true }
+dango-indexer-sql       = { workspace = true, features = ["async-graphql", "tracing"] }
 dango-proposal-preparer = { workspace = true }
 dango-types             = { workspace = true }
 data-encoding           = { workspace = true }
@@ -37,7 +37,7 @@ grug-vm-hybrid          = { workspace = true }
 hex                     = { workspace = true }
 home                    = { workspace = true }
 indexer-httpd           = { workspace = true }
-indexer-sql             = { workspace = true, features = ["tracing"] }
+indexer-sql             = { workspace = true, features = ["async-graphql", "tracing"] }
 pyth-client             = { workspace = true, optional = true }
 pyth-types              = { workspace = true, optional = true }
 rand                    = { workspace = true }
