--- a/indexer/testing/Cargo.toml
+++ b/indexer/testing/Cargo.toml
@@ -27,6 +27,6 @@ grug-testing     = { workspace = true }
 grug-types       = { workspace = true }
 grug-vm-rust     = { workspace = true }
 indexer-httpd    = { workspace = true, features = ["testing"] }
-indexer-sql      = { workspace = true, features = ["tracing"] }
+indexer-sql      = { workspace = true, features = ["async-graphql", "testing", "tracing"] }
 tokio            = { workspace = true }
 tracing          = { workspace = true }
