--- a/ui/applets/kit/package.json
+++ b/ui/applets/kit/package.json
@@ -91,6 +91,7 @@
   "peerDependencies": {
     "@tanstack/react-query": ">=5.0.0",
     "@tanstack/react-table": ">=8.0.0",
+    "date-fns": ">=4.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7"
