--- a/indexer/testing/Cargo.toml
+++ b/indexer/testing/Cargo.toml
@@ -12,9 +12,9 @@ actix-web      = { workspace = true }
 anyhow         = { workspace = true }
 awc            = { workspace = true }
 futures-util   = { workspace = true }
-grug           = { workspace = true }
 grug-app       = { workspace = true }
 grug-db-memory = { workspace = true }
+grug-math      = { workspace = true }
 grug-testing   = { workspace = true }
 grug-types     = { workspace = true }
 grug-vm-rust   = { workspace = true }
