Change String to Json (#774)
* Change String to Json

* Add JSON as parameters

* Fix test

* Fix

* Fix

* Fix

* Sync

* Fix

* Fix

* Fix

* move

* prettify

* change a dependency

* prettify a test

* fix a clippy warning

---------

Co-authored-by: larry <26318510+larry0x@users.noreply.github.com>

--- a/indexer/testing/Cargo.toml
+++ b/indexer/testing/Cargo.toml
@@ -14,6 +14,7 @@ awc            = { workspace = true }
 futures-util   = { workspace = true }
 grug-app       = { workspace = true }
 grug-db-memory = { workspace = true }
+grug-math      = { workspace = true }
 grug-testing   = { workspace = true }
 grug-types     = { workspace = true }
 grug-vm-rust   = { workspace = true }
