--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ members = [
   "indexer/*",
   "pyth/client",
   "pyth/types",
+  "utils/*",
 ]
 resolver = "2"
 
@@ -98,6 +99,7 @@ data-encoding           = "2"
 dialoguer               = "0.11"
 digest                  = "0.10"
 dyn-clone               = "1"
+dyn-event               = { path = "utils/dyn-event" }
 ed25519-dalek           = "2"
 elsa                    = "1"
 futures                 = "0.3"
