--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,5 @@
 [workspace]
 members = [
-  "config-parser",
   "dango/account/*",
   "dango/auth",
   "dango/bank",
@@ -93,7 +92,7 @@ clru                    = "0.6"
 colored                 = "3"
 colored_json            = "5"
 config                  = "0.15"
-config-parser           = { path = "config-parser" }
+config-parser           = { path = "utils/config-parser" }
 criterion               = "0.6"
 data-encoding           = "2"
 dialoguer               = "0.11"
