--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,5 @@
 [workspace]
 members = [
-  "config-parser",
   "dango/account/*",
   "dango/auth",
   "dango/bank",
@@ -44,6 +43,7 @@ members = [
   "indexer/*",
   "pyth/client",
   "pyth/types",
+  "utils/*",
 ]
 resolver = "2"
 
@@ -92,12 +92,13 @@ clru                    = "0.6"
 colored                 = "3"
 colored_json            = "5"
 config                  = "0.15"
-config-parser           = { path = "config-parser" }
+config-parser           = { path = "utils/config-parser" }
 criterion               = "0.6"
 data-encoding           = "2"
 dialoguer               = "0.11"
 digest                  = "0.10"
 dyn-clone               = "1"
+dyn-event               = { path = "utils/dyn-event" }
 ed25519-dalek           = "2"
 elsa                    = "1"
 futures                 = "0.3"
