--- a/indexer/client/Cargo.toml
+++ b/indexer/client/Cargo.toml
@@ -21,6 +21,7 @@ grug-types     = { workspace = true, features = ["tendermint"] }
 paste          = { workspace = true }
 reqwest        = { workspace = true, features = ["json"] }
 serde          = { workspace = true }
+serde_json     = { workspace = true }
 tendermint-rpc = { workspace = true }
 tracing        = { workspace = true, optional = true }
 
