--- a/indexer/client/Cargo.toml
+++ b/indexer/client/Cargo.toml
@@ -28,5 +28,10 @@ tracing        = { workspace = true, optional = true }
 [dev-dependencies]
 assert-json-diff = { workspace = true }
 assertor         = { workspace = true }
+dango-genesis    = { workspace = true }
+dango-mock-httpd = { workspace = true }
+dango-testing    = { workspace = true }
+grug             = { workspace = true }
+grug-testing     = { workspace = true }
 indexer-testing  = { workspace = true }
 tokio            = { workspace = true }
