Add prometheus /metrics

--- a/networks/localdango/configs/dango/config/app.toml
+++ b/networks/localdango/configs/dango/config/app.toml
@@ -42,6 +42,9 @@ ip = "0.0.0.0"
 # Port to listen on.
 port = 8080
 
+# Port to listen on.
+metrics_port = 9191
+
 # Allowed origin for CORS.
 #
 # Wildcards are not supported here. To allow all origins, simply comment out
