--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,101 +61,107 @@ version       = "0.0.0"
 
 [workspace.dependencies]
 # Dependencies
-actix                   = "0.13"
-actix-codec             = "0.5"
-actix-cors              = "0.7"
-actix-files             = "0"
-actix-http              = "3"
-actix-test              = "0.1"
-actix-web               = "4"
-aes-gcm                 = "0.10"
-alloy                   = "1"
-anyhow                  = "1"
-assert-json-diff        = "2"
-assertor                = { version = "0.0", git = "https://github.com/google/assertor" }
-async-graphql-actix-web = "7.0"
-async-std               = { version = "1", features = ["attributes", "tokio1"] }
-async-stream            = "0"
-async-trait             = "0"
-awc                     = "3"
-axum                    = "0.8"
-base64                  = "0.22"
-bip32                   = "0.5"
-blake2                  = "0.10"
-blake3                  = "1"
-bnum                    = "0.13"
-borsh                   = "1"
-byteorder               = "1"
-chrono                  = "0.4"
-clap                    = "4"
-clru                    = "0.6"
-colored                 = "3"
-colored_json            = "5"
-config                  = "0.15"
-config-parser           = { path = "config-parser" }
-criterion               = "0.6"
-data-encoding           = "2"
-dialoguer               = "0.11"
-digest                  = "0.10"
-dyn-clone               = "1"
-ed25519-dalek           = "2"
-elsa                    = "1"
-futures                 = "0.3"
-futures-util            = "0.3"
-glob                    = "0.3"
-graphql_client          = "0.14"
-hex                     = "0.4"
-hex-literal             = "0.4" # requires rust edition 2024 in order to upgrade to v1
-home                    = "0.5"
-ics23                   = "0.12"
-itertools               = "0.14"
-k256                    = "0.13"
-lzma-rs                 = "0.3"
-num_cpus                = "1"
-p256                    = "0.13"
-paste                   = "1"
-pbkdf2                  = "0.12"
-proc-macro2             = "1"
-proptest                = "1"
-prost                   = "0.13"
-pyth-sdk                = "0.8"
-pythnet-sdk             = { git = "https://github.com/pyth-network/pyth-crosschain", rev = "6077910" } # TODO: use crates.io once published
-quote                   = "1"
-rand                    = "0.8" # can't use 0.9 because RustCrypto libraries still depend on 0.8
-reqwest                 = { version = "0.12", features = ["stream"] }
-reqwest-eventsource     = "0.6.0"
-ripemd                  = "0.1"
-rocksdb                 = "0.23"
-sentry                  = { version = "0.38", features = ["log", "tracing"] }
-sentry-actix            = "0.38"
-serde                   = "1"
-serde_json              = "1"
-serde_with              = "3"
-sha2                    = "0.10"
-sha3                    = "0.10"
-signature               = "2"
-sqlx                    = "0.8"
-strum                   = "0.27"
-strum_macros            = "0.27"
-syn                     = "2"
-tempfile                = "3"
-tendermint              = "0.40.4"
-tendermint-rpc          = "0.40.4"
-tera                    = "1"
-test-case               = "3"
-thiserror               = "2"
-tokio                   = { version = "1", features = ["full"] }
-tokio-stream            = { version = "0.1", features = ["sync"] }
-toml                    = "0.8"
-tower                   = "0.5"
-tower-abci              = "0.19"
-tracing                 = "0.1"
-tracing-actix-web       = "0.7"
-tracing-subscriber      = { version = "0.3", features = ["env-filter", "fmt"] }
-url                     = "2.5.4"
-uuid                    = { version = "1", features = ["serde", "v4"] }
-wasmer                  = "5" # keep at v5 because there's license change for v6
-wasmer-middlewares      = "5" # keep at v5 because there's license change for v6
+actix                       = "0.13"
+actix-codec                 = "0.5"
+actix-cors                  = "0.7"
+actix-files                 = "0"
+actix-http                  = "3"
+actix-test                  = "0.1"
+actix-web                   = "4"
+actix-web-lab               = "0"
+actix-web-opentelemetry     = "0"
+actix-web-prometheus        = "0.1"
+aes-gcm                     = "0.10"
+alloy                       = "1"
+anyhow                      = "1"
+assert-json-diff            = "2"
+assertor                    = { version = "0.0", git = "https://github.com/google/assertor" }
+async-graphql-actix-web     = "7.0"
+async-std                   = { version = "1", features = ["attributes", "tokio1"] }
+async-stream                = "0"
+async-trait                 = "0"
+awc                         = "3"
+axum                        = "0.8"
+base64                      = "0.22"
+bip32                       = "0.5"
+blake2                      = "0.10"
+blake3                      = "1"
+bnum                        = "0.13"
+borsh                       = "1"
+byteorder                   = "1"
+chrono                      = "0.4"
+clap                        = "4"
+clru                        = "0.6"
+colored                     = "3"
+colored_json                = "5"
+config                      = "0.15"
+config-parser               = { path = "config-parser" }
+criterion                   = "0.6"
+data-encoding               = "2"
+dialoguer                   = "0.11"
+digest                      = "0.10"
+dyn-clone                   = "1"
+ed25519-dalek               = "2"
+elsa                        = "1"
+futures                     = "0.3"
+futures-util                = "0.3"
+glob                        = "0.3"
+graphql_client              = "0.14"
+hex                         = "0.4"
+hex-literal                 = "0.4" # requires rust edition 2024 in order to upgrade to v1
+home                        = "0.5"
+ics23                       = "0.12"
+itertools                   = "0.14"
+k256                        = "0.13"
+lzma-rs                     = "0.3"
+metrics                     = "0.24"
+metrics-exporter-prometheus = "0.17"
+num_cpus                    = "1"
+p256                        = "0.13"
+paste                       = "1"
+pbkdf2                      = "0.12"
+proc-macro2                 = "1"
+prometheus                  = "0.13"
+proptest                    = "1"
+prost                       = "0.13"
+pyth-sdk                    = "0.8"
+pythnet-sdk                 = { git = "https://github.com/pyth-network/pyth-crosschain", rev = "6077910" } # TODO: use crates.io once published
+quote                       = "1"
+rand                        = "0.8" # can't use 0.9 because RustCrypto libraries still depend on 0.8
+reqwest                     = { version = "0.12", features = ["stream"] }
+reqwest-eventsource         = "0.6.0"
+ripemd                      = "0.1"
+rocksdb                     = "0.23"
+sentry                      = { version = "0.38", features = ["log", "tracing"] }
+sentry-actix                = "0.38"
+serde                       = "1"
+serde_json                  = "1"
+serde_with                  = "3"
+sha2                        = "0.10"
+sha3                        = "0.10"
+signature                   = "2"
+sqlx                        = "0.8"
+strum                       = "0.27"
+strum_macros                = "0.27"
+syn                         = "2"
+tempfile                    = "3"
+tendermint                  = "0.40.4"
+tendermint-rpc              = "0.40.4"
+tera                        = "1"
+test-case                   = "3"
+thiserror                   = "2"
+tokio                       = { version = "1", features = ["full"] }
+tokio-stream                = { version = "0.1", features = ["sync"] }
+toml                        = "0.8"
+tower                       = "0.5"
+tower-abci                  = "0.19"
+tracing                     = "0.1"
+tracing-actix-web           = "0.7"
+tracing-subscriber          = { version = "0.3", features = ["env-filter", "fmt"] }
+url                         = "2.5.4"
+uuid                        = { version = "1", features = ["serde", "v4"] }
+wasmer                      = "5" # keep at v5 because there's license change for v6
+wasmer-middlewares          = "5" # keep at v5 because there's license change for v6
 
 # Left curve packages
 dango-account-factory       = { path = "dango/account/factory" }
