--- a/indexer/sql/Cargo.toml
+++ b/indexer/sql/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/lib.rs"
 
 [features]
 async-graphql = ["dep:async-graphql", "grug-types/async-graphql"]
+metrics       = ["dep:metrics"]
 testing       = []
 tracing       = ["dep:tracing"]
 
@@ -30,6 +31,7 @@ grug-types            = { workspace = true, features = ["sea-orm"] }
 indexer-disk-saver    = { workspace = true }
 indexer-sql-migration = { workspace = true }
 itertools             = { workspace = true }
+metrics               = { workspace = true, optional = true }
 sea-orm               = { workspace = true }
 serde                 = { workspace = true }
 serde_json            = { workspace = true }
