--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,7 @@ actix-http                  = "3"
 actix-test                  = "0.1"
 actix-web                   = "4"
 actix-web-lab               = "0"
+actix-web-metrics           = "0"
 aes-gcm                     = "0.10"
 alloy                       = "1"
 anyhow                      = "1"
